--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
-h1{
-    text-align: center;
-    color: chartreuse;
+.images{
+    display: flex;
+    margin: 100px auto;
+    padding: 0 8%;
+    justify-content: space-between;
+
+}
+.images ul{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.images .etabl{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2%;
+    transition: 0.5s;
+    height: 300px;
+    justify-content: space-between;
+}
+.info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+img{
+    width: 300px;
+    height: 200px;
+}
+.bouton a{
+    text-decoration: none;
+    background-color: orange;
+    padding: 15px;
+    padding-right: 235px;
+    margin-top: 200px;
+    justify-content: center;
+    color: black;
+}
+span{
+    margin: 50px;
 }
