--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 100px auto;
     padding: 0 8%;
     justify-content: space-between;
-
+    flex-wrap: wrap;
 }
 .images ul{
     display: flex;
